// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AttachmentManager renders FileManager when attachmentType is "file" 1`] = `
<FileManager
  attachmentType="file"
  id="new"
  loadAttachments={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "isThrow": false,
          "value": undefined,
        },
      ],
    }
  }
  prop1="foo"
  prop2="bar"
  prop3="baz"
/>
`;

exports[`AttachmentManager renders ImageManager when attachmentType is "image" 1`] = `
<DragDropContext(ImageManager)
  attachmentType="image"
  id="new"
  loadAttachments={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "isThrow": false,
          "value": undefined,
        },
      ],
    }
  }
  prop1="foo"
  prop2="bar"
  prop3="baz"
/>
`;

exports[`FileManager matches last snapshot 1`] = `
<div
  data-stylename="file-manager"
>
  <div
    data-stylename="section-label"
  >
    Files
  </div>
  <div
    data-stylename="file-previews"
  >
    <FilePreview
      attachment={
        Object {
          "filename": "foo.pdf",
          "id": "new",
          "type": "file",
          "url": "https://nowhere/foo.pdf",
        }
      }
      key="0"
      position={0}
      removeFile={[Function]}
    />
    <FilePreview
      attachment={
        Object {
          "filename": "bar.zip",
          "id": "new",
          "mimetype": "file/somefiletype",
          "url": "https://nowhere/bar.zip",
        }
      }
      key="1"
      position={1}
      removeFile={[Function]}
    />
    <FilePreview
      attachment={
        Object {
          "filename": "bar.zip",
          "id": "new",
          "url": "https://nowhere/bar.zip",
        }
      }
      key="2"
      position={2}
      removeFile={[Function]}
    />
    <div
      data-stylename="loading-file"
    >
      Loading...
    </div>
    <Connect(UploadAttachmentButton)
      data-stylename="add-file-row"
      id={1}
      onSuccess={[Function]}
      type="post"
    >
      <div
        data-stylename="add-file"
      >
        <span
          data-stylename="add-file-plus"
        >
          +
        </span>
         Add File
      </div>
    </Connect(UploadAttachmentButton)>
  </div>
</div>
`;

exports[`FilePreview matches last snapshot 1`] = `
<div
  data-stylename="file-preview"
>
  <Icon
    data-stylename="icon-document"
    name="Document"
  />
  <div
    data-stylename="file-name"
  >
    foo.pdf
  </div>
  <div
    data-stylename="file-size"
  >
    23.3mb
  </div>
  <Icon
    data-stylename="remove-file"
    name="Ex"
    onClick={[Function]}
  />
</div>
`;

exports[`ImageManager matches last snapshot 1`] = `
<div
  data-stylename="image-manager"
>
  <div
    data-stylename="section-label"
  >
    Images
  </div>
  <div
    data-stylename="image-previews"
  >
    <DropTarget(DragSource(ImagePreview))
      attachment={
        Object {
          "filename": "foo.png",
          "id": "new",
          "type": "image",
          "url": "https://nowhere/foo.png",
        }
      }
      key="0"
      position={0}
      removeImage={[Function]}
      switchImages={[Function]}
    />
    <DropTarget(DragSource(ImagePreview))
      attachment={
        Object {
          "filename": "bar.jpg",
          "id": "new",
          "mimetype": "image/jpeg",
          "url": "https://nowhere/bar.jpg",
        }
      }
      key="1"
      position={1}
      removeImage={[Function]}
      switchImages={[Function]}
    />
    <div
      data-stylename="add-image"
    >
      <Loading />
    </div>
    <Connect(UploadAttachmentButton)
      id={1}
      onSuccess={[Function]}
      type="post"
    >
      <div
        data-stylename="add-image"
      >
        +
      </div>
    </Connect(UploadAttachmentButton)>
  </div>
</div>
`;

exports[`ImagePreview matches last snapshot 1`] = `
<div
  data-stylename="image-preview"
>
  <div
    data-stylename="image"
    style={
      Object {
        "backgroundImage": "url(https://nowhere/foo.zng)",
      }
    }
  >
    <Icon
      data-stylename="remove-image"
      name="Ex"
      onClick={[Function]}
    />
    <div
      data-stylename="drag-preview"
    />
  </div>
</div>
`;
